sro-packages/revops-pack/main/default/objects/SubscriptionSummary__c/SubscriptionSummary__c.object-meta.xml
<CustomObject>
    <label>Subscription Summary</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Subscription Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>