sro-packages/revops-pack/main/default/objects/SubscriptionSummary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription Summaries</relationshipLabel>
    <relationshipName>SubscriptionSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>