sro-packages/revops-pack/main/default/objects/SubscriptionSummary__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Subscription Summaries</relationshipLabel>
    <relationshipName>SubscriptionSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>