sro-packages/revops-pack/main/default/objects/SubscriptionSummary__c/fields/OriginalSubscription__c.field-meta.xml
<CustomField>
    <fullName>OriginalSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Subscription Summaries</relationshipLabel>
    <relationshipName>SubscriptionSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>