sro-packages/revops-pack/main/default/objects/SubscriptionSummary__c/fields/SubscriptionOrigin__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionOrigin__c</fullName>
    <formula>IF( AND( OriginalSubscription__r.SBQQ__StartDate__c &gt;=  SummaryStartDate__c, OriginalSubscription__r.SBQQ__StartDate__c &lt;= SummaryEndDate__c)  ,
IF( TotalQuantity__c &gt; 0,
  IF( ISBLANK( OriginalSubscription__r.SBQQ__RevisedSubscription__c ), &quot;New Business&quot;, &quot;Expansion&quot; ),
  IF( ISBLANK( OriginalSubscription__r.SBQQ__TerminatedDate__c ), &quot;Contraction&quot;, &quot;Churn&quot; )
)
,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Origin</label>
    <type>Text</type>
</CustomField>