sro-packages/revops-pack/main/default/objects/SubscriptionSummary__c/fields/SummaryEndDate__c.field-meta.xml
<CustomField>
    <fullName>SummaryEndDate__c</fullName>
    <label>Summary End Date</label>
    <type>Date</type>
</CustomField>