sro-packages/revops-pack/main/default/objects/SubscriptionSummary__c/fields/SummaryStartDate__c.field-meta.xml
<CustomField>
    <fullName>SummaryStartDate__c</fullName>
    <label>Summary Start Date</label>
    <type>Date</type>
</CustomField>